Sevices and subservices working

--- a/assets/css/hc_custom_theme_style.css
+++ b/assets/css/hc_custom_theme_style.css
@@ -38,7 +38,9 @@ body {
   /* .service {
       background-color: #00afed;
   } */
-  ul {
+
+  /* bulleted list */
+  /* ul {
       margin: auto;
       padding: 0px;
   }
@@ -48,7 +50,7 @@ body {
       text-align: center;
       list-style: none; 
       padding: 10px;
-  }
+  } */
   /* ul{
     text-align: center;
   } */
