cleared up files to put live

--- a/assets/css/hair_admin.css
+++ b/assets/css/hair_admin.css
@@ -1,6 +1,5 @@
-
-/* this changes the colour in dashboard area */
+/* DASHBOARD ADMIN AREA */
 body{
-    background-color: #ffbb72;
+    background-color: #00afed;
 }
 
